<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_700"
    android:orientation="vertical"
    tools:context="gcm.play.android.samples.com.gcmquickstart.CreatePassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <EditText
                android:layout_weight="25"
                android:id="@+id/etUsername2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondeados_edittext"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>
            <Button
                android:id="@+id/btnCuentas2"
                android:layout_weight="75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionarCuenta"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassword"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondeados_edittext"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmNewPassword"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondeados_edittext"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondeados_button"
            android:padding="10dp"
            android:text="@string/registerUser"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>